# github_events_stats

./: .env.example  .gitignore  README.md  development_explanations_and_thoughts.md  docker-compose.yml
github_events_aggregator/: config.spec.toml  pyproject.toml
github_events_aggregator/app/: config.py  decorators.py  github_client.py  github_scraper.py  helpers.py  main.py  templates.py
github_events_aggregator/app/database/: github_event.py  github_event_wrapper.py
github_events_aggregator/app/scraping/: github_client.py  github_scraper.py
github_events_api/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
github_events_api/app/: config.py  main.py  stats_aggregator.py
github_events_api/tests/: conftest.py  test_stats_aggregator.py
github_events_scraper/: .env.example  Dockerfile  README.md  config.spec.toml  pyproject.toml
github_events_scraper/app/: __init__.py  config.py  decorators.py  helpers.py  main.py
github_events_scraper/app/database/: github_event.py  github_event_wrapper.py
github_events_scraper/app/scraping/: github_client.py  github_scraper.py
github_events_scraper/tests/: conftest.py  test_github_scraper.py
shared_resources/: database_utils.py  github_event.py  helpers.py
